--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,1 +1,31 @@
-<h1>Home Page</h1>
+<section class="main">
+
+<div class="nav">
+  <div class="logo">
+      <h1>Bloc Chat</h1>
+  </div>
+
+    <div class="new-room-button">
+      <button type="button" name="new-room">New Room</button>
+    </div>
+
+    <div class="chat-rooms">
+      <ul>
+        <li>Room 1</li>
+        <li>Room 2</li>
+        <li>Room 3</li>
+      </ul>
+    </div>
+  </div>
+
+    <div class="chat-box">
+    </div>
+
+    <div class="chat-text">
+        <div class="send-button">
+        </div>
+    </div>
+
+
+
+</section>
