--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,9 +13,15 @@
 
 }
 
-
-
-
+.room-name {
+  color: black;
+  margin: 10px;
+  padding: 10px;
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  font-size: 20px;
+}
 
 .new-room-button {
   width: 60px;
@@ -25,22 +31,7 @@
   display: block;
 
 }
-.logo, .new-room-button {
+.logo {
   margin-left: 20px;
   display: inline;
-}
-
-ul {
-    list-style-type: none;
-    margin: 10px;
-    padding: 10px;
-
-}
-
-li {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-    font-size: 20px;
 }
