--- a/app/templates/modal.html
+++ b/app/templates/modal.html
@@ -1,13 +1,13 @@
-<section class="modal-box" ng-controller="ModalCtrl as modal">
+<section class="modal-box">
     <div class="modal-header">
         <h3 class="modal-title">Make new room</h3>
     </div>
     <div class="modal-body">
         <h5 class="modal-prompt">Enter a room name</h5>
-            <input type="text" name="input" ng-model="room">
+            <input type="text" name="input" ng-model="modal.newRoom.$value">
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" type="button" ng-click="">Make room</button>
+        <button class="btn btn-primary" type="button" ng-click="modal.makeRoom()">Make room</button>
         <button class="btn btn-warning" type="button" ng-click="modal.cancel()">Cancel</button>
     </div>
 
