list messages completed

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -21,6 +21,7 @@
   color: #000;
   padding: 8px 16px;
   font-size: 20px;
+  cursor: pointer;
 }
 
 .new-room-button {
@@ -34,4 +35,37 @@
 .logo {
   margin-left: 20px;
   display: inline;
+}
+
+.message-box {
+  width: 67%;
+  height: 100%;
+  float: right;
+  padding-left: 20px:
+
+}
+
+.message-room-name  {
+  margin-left: 40px;
+  text-align: left;
+}
+
+.chats {
+  width: 67%;
+  float: right;
+  color: black;
+  display: block;
+}
+
+.username-text {
+  text-align: left;
+}
+
+.user-chats {
+  text-align: center;
+}
+
+.time {
+  text-align: right;
+  float: right;
 }
