--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,8 +8,8 @@
   background-color: #99cbe8;
   position: fixed;
   overflow: auto;
-  text-align: left;
-  padding-left: 20px;
+  text-align: center;
+
 
 }
 
@@ -41,31 +41,41 @@
   width: 67%;
   height: 100%;
   float: right;
-  padding-left: 20px:
+  text-align: center;
 
 }
 
 .message-room-name  {
-  margin-left: 40px;
-  text-align: left;
+  position: relative;
+  text-align: center;
+
+
 }
 
 .chats {
-  width: 67%;
-  float: right;
+  position: relative;
+  width: 75%;
   color: black;
-  display: block;
+  display: inline-block;
+  border: 2px solid #99cbe8;
+  border-radius: 8px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+
 }
 
 .username-text {
-  text-align: left;
+  float: left;
+  margin-left: 20px;
 }
 
 .user-chats {
-  text-align: center;
+text-align: center;
+margin-top: 15px;
 }
 
 .time {
-  text-align: right;
+  
   float: right;
+  margin-right: 20px;
 }
